# YouTube-Downloader-Tool

./: .env.sample  .gitignore  Project_Plan.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: installation.md  project_architecture.md
features/: __init__.py
features/audio_extraction/: __init__.py  audio_extraction.py
features/markdown_generation/: __init__.py
features/ocr_processing/: __init__.py
features/playlist_downloader/: __init__.py
features/slide_detection_capture/: __init__.py
features/transcription_diarization/: __init__.py
features/video_downloader/: __init__.py  validation.py
features/video_input_handling/: __init__.py
