[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader"
version = "0.1.0"
description = "A comprehensive video processing tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.3",
    "pytube>=12.1.0",
    "yt-dlp>=2023.0.0",
]

[project.scripts]
ytdl = "main:main"

[tool.setuptools]
packages = ["features"]